src/ui/pages/IncomingRequest/IncomingRequest.scss
.incoming-request {
  &.show {
    transform: translate3d(0, 0, 0);
    transition-duration: 0.5s;
  }

  &.hide {
    transform: translate3d(100%, 0, 0);
    transition-duration: 0.5s;
    .responsive-page-content {
      visibility: hidden;
    }
  }

  .responsive-page-content {
    justify-content: space-around;
  }

  h2 {
    text-align: center;
  }

  .request-icons-row {
    display: flex;
    flex-direction: row;
    justify-content: center;
    position: relative;
    margin-bottom: 2rem;

    .request-user-logo,
    .request-swap-logo,
    .request-provider-logo,
    .request-checkmark-logo {
      margin: 0;
      display: flex;
      flex-direction: column;
      justify-content: center;
    }

    .request-checkmark-logo {
      position: absolute;
    }

    .request-swap-logo,
    .request-user-logo,
    .request-checkmark-logo,
    .request-provider-logo img {
      width: 5rem;
      height: 5rem;
    }

    .request-swap-logo span {
      width: 2.75rem;
      height: 2.75rem;
      border-radius: 2.75rem;

      ion-icon {
        width: 1.875rem;
        height: 1.875rem;
        margin: 0 auto;
      }
    }

    .request-checkmark-logo span {
      width: 5rem;
      height: 5rem;
      border-radius: 5rem;

      ion-icon {
        width: 2.5rem;
        height: 2.5rem;
        margin: 0 auto;
      }
    }

    .request-user-logo {
      border-radius: 5rem;
      background-color: var(--ion-color-primary);

      ion-icon {
        width: 4.875rem;
        height: 4.875rem;
        margin: 0 auto;
      }
    }

    @media screen and (min-width: 250px) and (max-width: 370px) {
      .request-swap-logo,
      .request-user-logo,
      .request-checkmark-logo,
      .request-provider-logo img {
        width: 4rem;
        height: 4rem;
      }

      .request-swap-logo span {
        width: 2.2rem;
        height: 2.2rem;
        border-radius: 2.2rem;

        ion-icon {
          width: 1.5rem;
          height: 1.5rem;
        }
      }

      .request-checkmark-logo span {
        width: 4rem;
        height: 4rem;
        border-radius: 4rem;

        ion-icon {
          width: 2rem;
          height: 2rem;
        }
      }

      .request-user-logo {
        border-radius: 4rem;
        background-color: var(--ion-color-primary);

        ion-icon {
          width: 3.9rem;
          height: 3.9rem;
        }
      }
    }

    .request-swap-logo,
    .request-checkmark-logo {
      span {
        text-align: center;
        display: flex;
        flex-direction: column;
        justify-content: center;
        background: var(--ion-color-primary-gradient);
        margin: 0 auto;
      }
    }

    .request-provider-logo img {
      border-radius: 5rem;
    }
  }

  .request-info-row,
  .request-status {
    ion-col {
      display: flex;
      flex-direction: column;

      > * {
        text-align: center;
      }

      span {
        font-size: 0.875rem;
        font-weight: 400;
        color: var(--ion-color-secondary);
        margin-bottom: 0.3rem;

        &:first-letter {
          text-transform: capitalize;
        }
      }

      strong {
        font-size: 1rem;
        color: var(--ion-color-primary);

        &:first-letter {
          text-transform: capitalize;
        }
      }
    }
  }

  @keyframes downsizeAnimation {
    0% {
      transform: scale(1);
      opacity: 1;
    }
    100% {
      transform: scale(0);
      opacity: 0;
    }
  }

  @keyframes translateLeftAnimation {
    0% {
      transform: translate3d(0, 0, 0);
      opacity: 1;
    }
    50% {
      transform: translate3d(-50%, 0, 0);
      opacity: 1;
    }
    100% {
      transform: translate3d(-100%, 0, 0);
      opacity: 0;
    }
  }

  @keyframes translateRightAnimation {
    0% {
      transform: translate3d(0, 0, 0);
      opacity: 1;
    }
    50% {
      transform: translate3d(50%, 0, 0);
      opacity: 1;
    }
    100% {
      transform: translate3d(100%, 0, 0);
      opacity: 0;
    }
  }

  @keyframes translateTitleUpAnimation {
    0% {
      transform: translate3d(0, 0, 0);
      opacity: 1;
    }
    50% {
      transform: translate3d(0, -25vh, 0);
      opacity: 0.5;
    }
    100% {
      transform: translate3d(0, -50vh, 0);
      opacity: 0;
    }
  }

  @keyframes translateFooterDownAnimation {
    0% {
      transform: translate3d(0, 0, 0);
      opacity: 1;
    }
    50% {
      transform: translate3d(0, 25vh, 0);
      opacity: 0.5;
    }
    100% {
      transform: translate3d(0, 50vh, 0);
      opacity: 0;
    }
  }

  .container {
    display: flex;
    justify-content: center;
    align-items: center;
  }

  .request-icons-row > * {
    opacity: 1;
  }

  &.animation-off {
    .request-checkmark-logo,
    .request-status {
      display: none;
    }
  }

  &.animation-on {
    h2 {
      animation-delay: 1.5s;
      animation: translateTitleUpAnimation 1.5s forwards;
    }

    .request-user-logo {
      animation-delay: 1.5s;
      animation: translateRightAnimation 1.5s forwards;
    }

    .request-swap-logo {
      animation: downsizeAnimation 1s forwards;
    }

    .request-provider-logo {
      animation-delay: 1.5s;
      animation: translateLeftAnimation 1.5s forwards;
    }

    .request-checkmark-logo {
      animation: downsizeAnimation 1.5s forwards;
      animation-direction: reverse;
    }

    .request-info-row {
      animation: downsizeAnimation 1s forwards;
    }

    .request-status {
      animation: downsizeAnimation 1.5s forwards;
      animation-direction: reverse;
    }

    .page-footer {
      animation-delay: 1.5s;
      animation: translateFooterDownAnimation 1.5s forwards;
    }
  }
}

